--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shreyas S",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@fastify/cors": "^8.5.0",
+    "@fastify/static": "^8.0.4",
+    "fastify": "^4.29.0",
+    "fastify-socket.io": "^5.1.0"
+  }
 }
