--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,22 @@
   "description": "Real time collaboration app like Google Docs",
   "main": "server.js",
   "scripts": {
+    "start": "pm2 start ./server.js --name=real-time-server --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shreyas S",
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^8.5.0",
+    "@fastify/jwt": "^5.0.0",
     "@fastify/static": "^8.0.4",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "fastify": "^4.29.0",
-    "fastify-socket.io": "^5.1.0"
+    "fastify-bcrypt": "^1.0.1",
+    "fastify-socket.io": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.1",
+    "socket.io": "^4.8.1"
   }
 }
