--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fastify/cors": "^8.5.0",
     "@fastify/jwt": "^5.0.0",
+    "@fastify/rate-limit": "^9.1.0",
     "@fastify/static": "^8.0.4",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
