--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "pm2 start ./server.js --name=real-time-server --watch",
+    "up": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shreyas S",
